Task #1. Linear regression. Finalize.

--- a/Yandex ML Course #1/CourseProject/CourseProject.ipynb
+++ b/Yandex ML Course #1/CourseProject/CourseProject.ipynb
@@ -639,8 +639,8 @@
    "metadata": {},
    "source": [
     "$\n",
-    " Var(Z) = E\\left(Z^2\\right) - E^2\\left(Z\\right)=\n",
-    " \\dfrac{1664}{\\sqrt[4]{\\mathrm{e}}} + \\dfrac{832\\left( \\sqrt[4]{\\mathrm{e}} -1 \\right)^2}{\\sqrt{\\mathrm{e}}}-\\dfrac{832}  {\\sqrt{\\mathrm{e}}}- \\dfrac{4745}{6} - \\left( \n",
+    " Var(Z) = E\\left(Z^2\\right) - E^2\\left(Z\\right)= \\\\\n",
+    " \\quad \\quad \\quad = \\dfrac{1664}{\\sqrt[4]{\\mathrm{e}}} + \\dfrac{832\\left( \\sqrt[4]{\\mathrm{e}} -1 \\right)^2}{\\sqrt{\\mathrm{e}}}-\\dfrac{832}  {\\sqrt{\\mathrm{e}}}- \\dfrac{4745}{6} - \\left( \n",
     " \\dfrac{192}{\\sqrt[4]{\\mathrm{e}}} + \\dfrac{96\\left( \\sqrt[4]{\\mathrm{e}} -1 \\right)^2}{\\sqrt{\\mathrm{e}}}-\\dfrac{96}{\\sqrt{\\mathrm{e}}}-96\n",
     " \\right)^{2} = \n",
     " \\\\\n",
