Fix variable names inconsistency between notebook's paragraphs.

--- a/Yandex ML Course #2/Labs/linreg_height_weight.ipynb
+++ b/Yandex ML Course #2/Labs/linreg_height_weight.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,16 +92,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x19a0c7f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0xf4378d0>"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "5      67.78781  144.2971"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,16 +227,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0xfdc7e48>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x13761048>"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,16 +297,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x11706dd8>"
+       "<seaborn.axisgrid.PairGrid at 0x139fcef0>"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -436,14 +436,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 3: 229 ms per loop\n"
+      "1 loop, best of 3: 232 ms per loop\n"
      ]
     }
    ],
@@ -458,33 +458,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1000 loops, best of 3: 1.41 ms per loop\n"
+      "1000 loops, best of 3: 1.43 ms per loop\n"
      ]
     }
    ],
    "source": [
     "def scalar_quadratic_error_function(w0, w1):\n",
-    "    return np.sum((data[\"Height\"] - (w0 + w1*data[\"Weight\"]))**2)\n",
+    "    return np.sum((data[\"Height\"] - (w0*np.ones(data.shape[0]) + w1*data[\"Weight\"]))**2)\n",
     "%timeit res = scalar_quadratic_error_function(60, 0.16)    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 loops, best of 3: 3.3 ms per loop\n"
+      "100 loops, best of 3: 3.37 ms per loop\n"
      ]
     }
    ],
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -518,15 +518,15 @@
      "output_type": "stream",
      "text": [
       "Equity test\n",
-      "('sup. simple: ', 3894862.142936876, ' | simple: ', 3894862.1429368784, ' | vector: ', Value    3.894862e+06\n",
+      "('sup. simple: ', 3894862.142936876, ' | scalar: ', 3894862.1429368784, ' | vector: ', Value    3.894862e+06\n",
       "dtype: float64)\n",
-      "('sup. simple: ', 766971.7346801093, ' | simple: ', 766971.7346801083, ' | vector: ', Value    766971.73468\n",
+      "('sup. simple: ', 766971.7346801093, ' | scalar: ', 766971.7346801083, ' | vector: ', Value    766971.73468\n",
       "dtype: float64)\n",
-      "('sup. simple: ', 138197.3794281683, ' | simple: ', 138197.3794281693, ' | vector: ', Value    138197.379428\n",
+      "('sup. simple: ', 138197.3794281683, ' | scalar: ', 138197.3794281693, ' | vector: ', Value    138197.379428\n",
       "dtype: float64)\n",
-      "('sup. simple: ', 9189853905.327341, ' | simple: ', 9189853905.327328, ' | vector: ', Value    9.189854e+09\n",
+      "('sup. simple: ', 9189853905.327341, ' | scalar: ', 9189853905.327328, ' | vector: ', Value    9.189854e+09\n",
       "dtype: float64)\n",
-      "('sup. simple: ', 38329406523.29122, ' | simple: ', 38329406523.291176, ' | vector: ', Value    3.832941e+10\n",
+      "('sup. simple: ', 38329406523.29122, ' | scalar: ', 38329406523.291176, ' | vector: ', Value    3.832941e+10\n",
       "dtype: float64)\n"
      ]
     }
@@ -536,7 +536,7 @@
     "print \"Equity test\"\n",
     "for param in test_data:\n",
     "    print (\"sup. simple: \", super_simple_quadratic_error_function(param[0], param[1]),\n",
-    "           \" | simple: \",simple_quadratic_error_function(param[0], param[1]),\n",
+    "           \" | scalar: \",scalar_quadratic_error_function(param[0], param[1]),\n",
     "           \" | vector: \",vector_quadratic_error_function(param[0], param[1]))"
    ]
   },
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
    ],
    "source": [
     "w0_w1_surface_minimum = optimize.minimize(\n",
-    "                                            fun=lambda vector: simple_quadratic_error_function(vector[0], vector[1]),\n",
+    "                                            fun=lambda vector: scalar_quadratic_error_function(vector[0], vector[1]),\n",
     "                                            x0=[0.,0.], \n",
     "                                            method=\"L-BFGS-B\", \n",
     "                                            bounds=[(-100.,100.),(-5.,5.)]\n",
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
